Fix target temp layout on mobile.

--- a/client/src/app/thermo/components/heating-target/heating-target.component.scss
+++ b/client/src/app/thermo/components/heating-target/heating-target.component.scss
@@ -25,11 +25,11 @@
 }
 
 .thermo-target--decrease {
-
+	margin-left: 0;
 }
 
 .thermo-target--increase {
-
+	margin-right: 0;
 }
 
 .thermo-target--value {
